--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,9 @@
         <div>Enemies: <span id="enemyCount">0</span></div>
     </div>
     
+    <script src="/socket.io/socket.io.js"></script>
     <script src="main.js"></script>
+
 
 </body>
 </html>
